--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="46dp"
@@ -45,8 +46,7 @@
                     android:layout_height="wrap_content"
                     android:onClick="accounting"
                     android:text="Municipal Accounting Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView8"
@@ -54,8 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Administrator Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView9"
@@ -63,8 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Agriculture Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -72,8 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Assessor's Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -81,8 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Budget Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView12"
@@ -90,8 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Business Processing and Licensing Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView13"
@@ -99,8 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Civil Registry Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView14"
@@ -108,8 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Disaster Risk Reduction Management Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -117,8 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Engineering Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView2"
@@ -126,8 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Environmental and Natural Resources"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -135,8 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal General Services Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -144,8 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Health Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -153,8 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Human Resource Management Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView17"
@@ -162,8 +150,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Mayor's Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView18"
@@ -171,8 +158,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Bids and Awards Committee"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView19"
@@ -180,8 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Indigineous People Mandatory Representative"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView20"
@@ -189,8 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Kitaotao Water System Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView22"
@@ -198,8 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Local Economic Development and \nInvestment Promotion Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView23"
@@ -207,8 +190,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Local Youth Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView24"
@@ -216,8 +198,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Tourism Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView25"
@@ -225,8 +206,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Person With Disability Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView26"
@@ -234,8 +214,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Public Employment Services Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView27"
@@ -243,8 +222,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Office of the Senior Citizen's Affairs"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView28"
@@ -252,8 +230,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Planning and Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView29"
@@ -261,8 +238,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Population Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView30"
@@ -270,8 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Sangguniang Bayan Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView31"
@@ -279,17 +254,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Social Welfare and Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView32"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
+                    android:layout_marginBottom="64dp"
                     android:text="Municipal Treasurer's Office"
-                    android:textAlignment="center"
-                    android:textColor="#673AB7" />
+                    android:textAlignment="center" />
 
             </LinearLayout>
         </ScrollView>
