--- a/app/src/main/res/layout/office_municipal_accounting_office.xml
+++ b/app/src/main/res/layout/office_municipal_accounting_office.xml
@@ -68,8 +68,7 @@
                     android:layout_marginRight="16dp"
                     android:gravity="center"
                     android:onClick="accounting_service_1"
-                    android:text="⦿ Request for Issuance of Withholding Tax Certificate (BIR Form 2307)"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Issuance of Withholding Tax Certificate (BIR Form 2307)" />
 
                 <TextView
                     android:id="@+id/service_2"
@@ -79,8 +78,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents for Travel Cash Advances"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents for Travel Cash Advances" />
 
                 <TextView
                     android:id="@+id/service_3"
@@ -90,8 +88,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents for Travel Reimbursements"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents for Travel Reimbursements" />
 
                 <TextView
                     android:id="@+id/service_4"
@@ -101,8 +98,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents with Bidding (Goods)"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents with Bidding (Goods)" />
 
                 <TextView
                     android:id="@+id/service_5"
@@ -112,8 +108,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents with Bidding (Infrastructure Projects)"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Review of Disbursement Vouchers and Supporting Documents with Bidding (Infrastructure Projects)" />
 
                 <TextView
                     android:id="@+id/internal_services"
@@ -133,8 +128,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Review of Liquidation Reports for Travel Cash Advances"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Review of Liquidation Reports for Travel Cash Advances" />
 
                 <TextView
                     android:id="@+id/service_7"
@@ -144,8 +138,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="⦿ Request for Certificate of Net Take Home Pay"
-                    android:textColor="#673AB7" />
+                    android:text="⦿ Request for Certificate of Net Take Home Pay" />
             </LinearLayout>
         </ScrollView>
 
