--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,11 +5,13 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.SST" parent="Base.Theme.SST" />
+    <style name="Theme.SST" parent="Base.Theme.SST">
+    </style>
     <style name="Theme.SST.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
     <style name="Theme.SST.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.SST.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
