--- a/app/src/main/res/drawable/cell_shape_normal.xml
+++ b/app/src/main/res/drawable/cell_shape_normal.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape= "rectangle">
-    <solid android:color="#fef7ff"/>
-    <stroke android:width="1dp" android:color="#000000"/>
+    <solid android:color="@color/fake_white"/>
+    <stroke android:width="2dp" android:color="#000000"/>
 </shape>
