--- a/app/src/main/res/drawable/cell_shape_normal_left_notop.xml
+++ b/app/src/main/res/drawable/cell_shape_normal_left_notop.xml
@@ -5,9 +5,9 @@
             <solid android:color="#000000" />
         </shape>
     </item>
-    <item android:left="1dp">
+    <item android:left="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#fef7ff" />
+            <solid android:color="@color/fake_white" />
         </shape>
     </item>
 </layer-list>
