!update added administrator service to the application

--- a/app/src/main/res/layout/accounting_service4.xml
+++ b/app/src/main/res/layout/accounting_service4.xml
@@ -1644,7 +1644,8 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:paddingBottom="150dp">
 
                         <TextView
                             android:id="@+id/tableTotal"
