--- a/app/src/main/res/layout/accounting_service1.xml
+++ b/app/src/main/res/layout/accounting_service1.xml
@@ -726,7 +726,8 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:paddingBottom="150dp">
 
                         <TextView
                             android:id="@+id/tableTotal"
