--- a/app/src/main/res/layout/accounting_service3.xml
+++ b/app/src/main/res/layout/accounting_service3.xml
@@ -893,7 +893,8 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:paddingBottom="150dp">
 
                         <TextView
                             android:id="@+id/tableTotal"
