--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/administrator"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
