--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/agriculture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
