--- a/app/src/main/res/layout/accounting_service4.xml
+++ b/app/src/main/res/layout/accounting_service4.xml
@@ -13,7 +13,9 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:scrollbarThumbVertical="@android:color/transparent"
+            android:scrollbarThumbHorizontal="@android:color/transparent">
 
             <LinearLayout
                 android:layout_width="match_parent"
