--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,9 @@
             android:layout_marginTop="182dp"
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@+id/textView6"
-            app:layout_wrapBehaviorInParent="horizontal_only">
+            app:layout_wrapBehaviorInParent="horizontal_only"
+            android:scrollbarThumbVertical="@android:color/transparent"
+            android:scrollbarThumbHorizontal="@android:color/transparent">
 
             <LinearLayout
                 android:layout_width="match_parent"
