--- a/app/src/main/res/layout/office_municipal_agriculture_office.xml
+++ b/app/src/main/res/layout/office_municipal_agriculture_office.xml
@@ -43,7 +43,9 @@
             android:layout_marginTop="190dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:scrollbarThumbVertical="@android:color/transparent"
+            android:scrollbarThumbHorizontal="@android:color/transparent">
 
             <LinearLayout
                 android:layout_width="match_parent"
