--- a/app/src/main/res/layout/office_municipal_accounting_office.xml
+++ b/app/src/main/res/layout/office_municipal_accounting_office.xml
@@ -8,6 +8,7 @@
     tools:context=".office.MunicipalAccountingOffice">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -41,11 +42,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="190dp"
+            android:scrollbarThumbHorizontal="@android:color/transparent"
+            android:scrollbarThumbVertical="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:scrollbarThumbVertical="@android:color/transparent"
-            android:scrollbarThumbHorizontal="@android:color/transparent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,4 +153,5 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/header" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
