!update splashscreen, added assessor service 2 data's

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/assessor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
