--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,6 +3,7 @@
     <style name="Theme.AnimatedSplash.MySplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/fake_white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/avd_kitaotao</item>
+        <item name="windowSplashScreenAnimationDuration">4000</item>
         <item name="postSplashScreenTheme">@style/Theme.SST</item>
     </style>
 </resources>
